--- a/index.html
+++ b/index.html
@@ -298,6 +298,17 @@
             </div>
           </div>
 
+	<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-img"><img src="./assets/img/project/web-5.PNG " class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>web 5</h4>
+              <p>web</p>
+              <a href="./assets/img/project/web-5.PNG" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="./assets/img/project/web-1.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
