--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               <h4>web 5</h4>
               <p>web</p>
               <a href="./assets/img/project/web-5.PNG" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+                class="portfolio-lightbox preview-link" title="web 5"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
