--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
           </div>
 
-	<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+	<div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="./assets/img/project/web-5.PNG " class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>web 5</h4>
