--- a/index.html
+++ b/index.html
@@ -418,6 +418,19 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
+                <img src="./assets/img/testimonials/jatin.jpeg" class="testimonial-img" alt="">
+                <h3>Abhi Dayani</h3>
+                <h4>Developer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Very Greatful to Fluid Studios for all the hard work they put into our website, finished product was fantastic. Jessie is such a pleasure to work with, would recommed them!
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
                 <img src="assets/img/testimonials/Hemangi.jpeg" class="testimonial-img" alt="">
                 <h3>Hemangi Mandani</h3>
                 <h4>Student</h4>
