--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="./assets/img/testimonials/jatin.jpeg" class="testimonial-img" alt="">
+                <img src="./assets/img/testimonials/Abhi.png" class="testimonial-img" alt="">
                 <h3>Abhi Dayani</h3>
                 <h4>Developer</h4>
                 <p>
