--- a/index.html
+++ b/index.html
@@ -440,6 +440,19 @@
               </div>
             </div>
 
+             <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="./assets/img/testimonials/Mayuri.png" class="testimonial-img" alt="">
+                <h3>Mayuri Bavishi</h3>
+                <h4>Doctor</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Just wanted to say a big thanks from my self and jon for the wesite, we'er really pleased with it. We've had lots of good feedback on it and quite a few enquiries through it already!
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/Hemangi.jpeg" class="testimonial-img" alt="">
