--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <h4>Developer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Very Greatful to Fluid Studios for all the hard work they put into our website, finished product was fantastic. Jessie is such a pleasure to work with, would recommed them!
+                 What a helpful bunch. After being scammed by another web design company, I was recommended Fluid Studios and I now know why. They are quick to respond, informative and deliver what is asked for. Would highly recommend. Thanks guys!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -447,7 +447,20 @@
                 <h4>Doctor</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Just wanted to say a big thanks from my self and jon for the wesite, we'er really pleased with it. We've had lots of good feedback on it and quite a few enquiries through it already!
+                  Fluid Studios provided the most prompt quote of three requested for website design, communicated well during the project, and provided a well-designed website with an easy to use content management system.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="./assets/img/testimonials/Deep.png" class="testimonial-img" alt="">
+                <h3>Deep Bhensdadiya</h3>
+                <h4>Flutter Developer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  We partnered with Fluid Studios to design our website. We found them incredibly helpful and patient as we really didn't know what we wanted. Greg met with us on numerous occasions and we found the whole process a great experience. We ended up with a website we loved. I would definitely recommend Fluid Studios - you won't be disappointed.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
