--- a/index.html
+++ b/index.html
@@ -479,6 +479,19 @@
               </div>
             </div>
 
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/Ishan.png" class="testimonial-img" alt="">
+                <h3>Ishan Vaghani</h3>
+                <h4>Student</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  As usual very helpful, nothing to much trouble and the end result as I envisaged. Good price point, you pay for what you get and Fluid are full value for money.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+
           </div>
           <div class="swiper-pagination"></div>
         </div>
