--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
           <li data-filter=".filter-app">App</li>
           <li data-filter=".filter-card">Card</li>
           <li data-filter=".filter-web">Web</li>
+ 	<li data-filter=".filter-Chart">Chart</li>
         </ul>
 
         <div class="row portfolio-container">
@@ -283,6 +284,16 @@
               <p>App</p>
               <a href="./assets/img/project/app-1.PNG" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+	<div class="col-lg-4 col-md-6 portfolio-item filter-Chart">
+            <div class="portfolio-img"><img src="./assets/img/project/pichart.PNG " class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>pichart</h4>
+              <p>pichart</p>
+              <a href="./assets/img/project/pichart.PNG" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="pichart"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
