--- a/index.html
+++ b/index.html
@@ -287,11 +287,12 @@
               <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
 	<div class="col-lg-4 col-md-6 portfolio-item filter-Chart">
             <div class="portfolio-img"><img src="./assets/img/project/pichart.PNG " class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>pichart</h4>
-              <p>pichart</p>
+              <p>Chart</p>
               <a href="./assets/img/project/pichart.PNG" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="pichart"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
