--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ f<!DOCTYPE html>
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="02" data-purecounter-duration="1"
+                    <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1"
                       class="purecounter"></span>
                     <p><strong>Happy Clients</strong></p>
                   </div>
@@ -106,7 +106,7 @@ f<!DOCTYPE html>
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-journal-richtext" style="color: #8a1ac2;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="08" data-purecounter-duration="1"
+                    <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
                       class="purecounter"></span>
                     <p><strong>Projects Completed</strong></p>
                   </div>
@@ -116,7 +116,7 @@ f<!DOCTYPE html>
 
             <div class="skills-content ps-lg-4">
               <div class="progress">
-                <span class="skill">Figma <i class="val">90%</i></span>
+                <span class="skill">Figma <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
@@ -124,12 +124,69 @@ f<!DOCTYPE html>
               </div>
 
               <div class="progress">
-                <span class="skill">Photoshop <i class="val">60%</i></span>
+                <span class="skill">Prototyping <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
+
+              <div class="progress">
+                <span class="skill">Wireframe <i class="val">100%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Adobe XD <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Sketch <i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Adobe Illustrator <i class="val">70%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Webflow <i class="val">70%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Svgator <i class="val">70%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Adobe Photoshop <i class="val">60%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
 
               <div class="progress">
                 <span class="skill">HTML & CSS <i class="val">50%</i></span>
